# FAstAPI_HM2

./: README.md  task.txt
app/: README.md  pyproject.toml
app/app/: __init__.py
