[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Yar00myr <ivanucaromir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
pydantic = "^2.9.2"

[tool.poetry.scripts]
start = "app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
